# Systemus

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3106648  CMakeSettings.json  README.md  Systemus.asta  Systemus.xml
cmake/: FindQt.cmake
examples/: CMakeLists.txt  data.cpp  data.h  direction.cpp  direction.h  main.cpp  sample.db  sample.sql
share/Systemus/Templates/: system.json
src/: CMakeLists.txt  Systemus  SystemusConfig.cmake  SystemusConfig.cmake.in  SystemusMacros.cmake
src/core/: CMakeLists.txt
src/core/data/: CMakeLists.txt  abstractdatamodel.cpp  abstractdatamodel.h  abstractdatamodel_p.h  authorizationdata.cpp  authorizationdata.h  authorizationdata_p.h  data.cpp  data.cpp.QWeSsX  data.h  data_impl.h  data_p.h  dataholder.h  datamodel.cpp  datamodel.h  datamodel_p.h  datarelation.cpp  datarelation.h  datatablemodel.cpp  datatablemodel.h  datatablemodel_p.h  metatable.cpp  metatable.h  metatable_p.h  orm.cpp  orm.h  orm_p.h  ormbackend.cpp  ormbackend.h  ormbackend_p.h
src/core/kernel/: CMakeLists.txt  config.h  config.h.in  data.cpp  data.h  data_p.h  database.cpp  debug.cpp  debug_p.h  global.cpp  global.h  namespace.cpp  namespace.h  namespace_p.h  settings.cpp  settings.h  settings_p.h  system.cpp  system.h  system_p.h  systemus.h  user.h
src/core/model/: CMakeLists.txt  datatablemodel.cpp  datatablemodel.h  datatablemodel_p.h  sqlquerymodel.cpp  sqlquerymodel.h
src/core/orm/: CMakeLists.txt  abstractdata.cpp  abstractdata.h  authorizationdata.h  authorizationdata_p.h  data.cpp  data.h  data_p.h  datarelation.cpp  datarelation.h  internaldata.cpp  internaldata.h  internaldata_p.h  metamapper.cpp  metamapper.h  metatable.cpp  metatable.h  metatable_p.h  orm.cpp  orm.h  orm_p.h  ormbackend.cpp  ormbackend.h  ormbackend_p.h  ormdata.cpp  ormdata.h  ormdata_p.h  querybuilder.cpp  querybuilder.h  secretproperty.cpp  secretproperty.h  secretproperty_p.h
src/core/resources/: sql_keywords.txt  systemus_core_res.qrc
src/core/user/: CMakeLists.txt  authenticator.cpp  authenticator.h  authenticator_p.h  group.cpp  group.h  group_p.h  permission.cpp  permission.h  permission_p.h  privilege.cpp  privilege.h  privilege_p.h  profile_p.h  role.cpp  role.h  role_p.h  securedata_p.h  user.cpp  user.h  user_p.h
src/manager/: CMakeLists.txt  database.db  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/permgen/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.cpp.EjeYeo  mainwidget.h  mainwidget.ui
src/tool/: CMakeLists.txt  command.cpp  command.h  infoscommand.cpp  infoscommand.h  installcommand.cpp  installcommand.h  main.cpp  res.qrc  system.cpp  system.h
src/tool/configs/: system.json
src/tool/scripts/: Systemus0.sql
src/tool/scripts/MYSQL/: Systemus0.sql  Systemus0_data.sql  Systemus0_tables.sql
src/tool/scripts/SQLITE/: Systemus0.sql
src/widgets/: CMakeLists.txt
src/widgets/container/: CMakeLists.txt  interfacestack.cpp  interfacestack.h  interfacestack.ui
src/widgets/data/: CMakeLists.txt  dataedit.cpp  dataedit.h  dataedit_p.h  dataeditdialog.ui  datawindow.cpp  datawindow.h  datawindow_p.h  datawindowmanager.cpp  datawindowmanager.h  datawindowmanager_p.h  filteritemwidget.cpp  filteritemwidget.h  filteritemwidget.ui  filteritemwidget_p.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  filterwidgetimpl.cpp
src/widgets/interface/: CMakeLists.txt  complexinterface.ui  datainterface.cpp  datainterface.h  datainterface.ui  datainterface_p.h  interfaceholder.cpp  interfaceserver.cpp  standarduserinterface_p.h  userinterface.cpp  userinterface.h  userinterface_p.h
src/widgets/kernel/: CMakeLists.txt  actionwidget.cpp  centralwidget.cpp  centralwidget.h  centralwidget.ui  dataedit.cpp  dataedit.h  dataedit_p.h  dataeditdialog.ui  filterwidget.h  filterwidget.ui  filterwidget_p.h  filterwidgetimpl_p.h  global.cpp  global.h  interface_stack_p.h  interfaceholder.cpp  interfaceholder.h  interfaceserver.cpp  interfaceserver.h  interfaceserver_p.h  interfacestack.cpp  interfacestack.h  interfacestack.ui  interfacestack_p.h  namespace.cpp  namespace.h  searchbar.cpp  standarduserinterface.cpp  standarduserinterface.h  standarduserinterface.ui  standarduserinterface_p.h  tableview.cpp  tableview.h  toolbar.cpp  toolbar.h  userinterface.cpp  userinterface.h  userinterface_p.h
src/widgets/resources/: systemus_widgets_res.qrc
src/widgets/user/: CMakeLists.txt  databaseedit.ui  group.ui  issuedsecuredataedit.ui  logindialog.cpp  logindialog.h  logindialog.ui  profileedit.ui  role.ui  securedataedit.ui  useredit.cpp  useredit.h  useredit.ui
src/widgets/view/: CMakeLists.txt  tableview.cpp  tableview.h
src/widgets/window/: CMakeLists.txt  actionwidget.h  searchbar.h  toolbar.cpp  toolbar.h
test/: CMakeLists.txt  global.h
test/core/: CMakeLists.txt  main.cpp  sqlquerylist.cpp  sqlquerylist.h
test/core/data/: CMakeLists.txt  datainfotest.cpp  datainfotest.h  datatest.cpp  datatest.h  usertest.cpp  usertest.h
test/core/orm/: metatabletest.cpp  metatabletest.h  sample.h
testdata/: sample_db.sqlite3
translations/: systemus_fr.ts
